Apply patch provided on sf for Java 9 compatibility
https://sourceforge.net/p/tomcatplugin/tickets/40/
Thank you Georg Nepp!